style.css
/* ... */
.my_modal-dialog {
  position: relative;
  width: auto;
  margin: 10px;
}

.my_modal-content {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background-color: #fff;
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
  border: 1px solid rgba(0, 0, 0, 0.2);
  border-radius: 6px;
  outline: 0;
}

@media (min-width: 768px) {
  .my_modal-content {
    -webkit-box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);
    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);
  }
}

.my_modal-header {
  display: block;
  padding: 14px 14px 4px;
}

.my_modal-title {
  margin-top: 0;
  margin-bottom: 0;
  line-height: 1.5;
  font-size: 1.25rem;
  font-weight: 500;
  border-bottom: 1px solid #d4d4d4;
}

.close {
  padding: 1px 5px 0;
  border: 1px solid #000;
  border-radius: 50%;
  font-family: sans-serif;
  font-size: 24px;
  font-weight: 700;
  line-height: 1;
  color: #000;
  text-shadow: 0 1px 0 #fff;
  opacity: 0.5;
  text-decoration: none;
  top: 4px;
  right: 4px;
  position: absolute;
}

.close:focus,
.close:hover {
  color: #000;
  text-decoration: none;
  cursor: pointer;
  opacity: 0.75;
}

.my_modal-body {
  position: relative;
  -webkit-box-flex: 1;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  padding: 15px;
  overflow: auto;
}
:root {
  --font1: 1.125rem;
  --font2: 1.375rem;
  --font3: 1.75rem;
  --font4: 2rem;
  --padding: 75px;
  --width: 1440px;
}

@font-face {
  font-family: Forum-regular;
  src: url("assets/fonts/Forum-Regular.ttf");
}

@font-face {
  font-family: Roboto-Bold;
  src: url("assets/fonts/Roboto-Bold.ttf");
}

@font-face {
  font-family: Roboto-Regular;
  src: url("assets/fonts/Roboto-Regular.ttf");
}

@font-face {
  font-family: Roboto-Medium;
  src: url("assets/fonts/Roboto-Medium.ttf");
}

@font-face {
  font-family: Roboto-Thin;
  src: url("assets/fonts/Roboto-Thin.ttf");
}

/*html {
  scroll-behavior: smooth;
}*/
div.museum-project #welcome-nav,
#alt-welcome-nav {
  display: none;
  z-index: 100;
}

div.museum-project #alt-welcome-nav {
  display: grid;
  visibility: hidden;
  position: absolute;
  top: 443px;
  left: 55px;
  grid-template-rows: 194px 161px 118px;
  grid-template-columns: 319px 319px;
  column-gap: 20px;
  row-gap: 20px;
}
div.museum-project #alt-1 {
  grid-column: 1 / 3;
  grid-row: 1;
  max-width: 658px;
  height: auto;
  background: url(assets/img/alt1.jpg);
}
div.museum-project #alt-2 {
  grid-column: 1 / 2;
  grid-row: 2;
  max-width: 319px;
  height: auto;
  background: url(assets/img/alt2.jpg);
}
div.museum-project #alt-3 {
  grid-column: 2 / 3;
  grid-row: 2;
  max-width: 319px;
  height: auto;
  background: url(assets/img/alt3.jpg);
}
div.museum-project #alt-4 {
  grid-column: 1 / 3;
  grid-row: 3;
  border-top: 1px solid rgba(255, 255, 255, 0.5);
  margin-top: 10px;
  display: grid;
  grid-template-rows: 108px;
  justify-content: center;
}
div.museum-project ul.social.social-header {
  padding-left: 0px;
  padding-top: 20px;
}
div.museum-project .vector {
  background: url(assets/svg/Vector-welcome.svg) no-repeat;
  background-position: 100% 10%;
  width: 12px;
  height: 12px;
  padding: 0px;
  margin: 0px;
}
div.museum-project .section {
  padding: 75px 0 75px 12px;
}

div.museum-project header .section {
  padding: 58px 0px;
}
div.museum-project .dark-section {
  background-color: #000;
  color: #fff;
}

div.museum-project .container {
  max-width: var(--width);
  margin: 0 auto;
}
div.museum-project .header-container > div {
  flex-grow: 1;
}
div.museum-project .header-container,
div.museum-project nav,
div.museum-project header ul,
div.museum-project .welcome-slider {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

div.museum-project .logo {
  background-image: url("assets/svg/logo.svg");
  background-repeat: no-repeat;
  height: 34px;
  width: 199px;
}

div.museum-project .logo:hover,
div.museum-project nav div:hover,
div.museum-project span.words:hover {
  filter: invert(60%) sepia(6%) saturate(1929%) hue-rotate(356deg)
    brightness(220%) contrast(88%);
}

div.museum-project li {
  list-style: none;
}

div.museum-project nav {
  max-width: 775px;
  float: left;
}

div.museum-project nav div {
  padding: 0 27.5px;
  color: #fff;
  font-size: var(--font2);
  height: 34px;
  vertical-align: middle;
}

div.museum-project a {
  text-decoration: none;
}

div.museum-project .close-nav {
  background: url(assets/svg/Group44.svg);
  width: 25px;
  height: 25px;
  position: absolute;
  right: 20px;
  top: 53px;
  visibility: hidden;
}
div.museum-project .burger-nav {
  background: url(assets/svg/burger.svg);
  width: 25px;
  height: 25px;
  position: absolute;
  right: 20px;
  top: 53px;
  display: none;
}

div.museum-project nav li:last-child div {
  padding-right: 0;
}

div.museum-project nav ul {
  padding-right: 3vw;
  margin: 0;
}

div.museum-project main section:first-child {
  padding: 0;
}

div.museum-project .welcome {
  max-width: 1440px;
}
/* .welcome::before {
  content: "";
  position: absolute;
  top: 150px;
  left: 0px;
  height: 810px;
  width: 500px;
  background: linear-gradient(
    90deg,
    rgba(0, 0, 0, 1) 23%,
    rgba(255, 255, 255, 0) 40%
  );
  z-index: 10;
} */
div.museum-project .welcome-slider-img {
  position: relative;
  height: 810px;
  width: 100%;
  max-width: 1440px;
  overflow: hidden;
  padding: 0;
}
div.museum-project .sl-img {
  position: absolute;
  right: 0px;
  transition: 0.05s linear;
  transform: translateX(-1000%);
  visibility: hidden;
}
div.museum-project .sl-img:before {
  content: "";
  position: absolute;
  top: 0px;
  left: 0px;
  height: 100%;
  width: 30%;
  background: linear-gradient(
    90deg,
    rgba(0, 0, 0, 1) 0%,
    rgba(0, 0, 0, 0.5) 16%,
    rgba(0, 0, 0, 0) 30%
  );
  z-index: 10;
}
/* ... */

